...
      }}
    >
      {/* 1 — Marketplace */}
      <Tabs.Screen
        name="index"
        options={{
          title: lang === 'am' ? 'ገበያ' : lang === 'om' ? 'Gabaa' : 'Market',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="storefront-outline" size={size} color={color} />
          ),
        }}
      />

...
